refacto(app): wip on rendering colors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,7 @@
     "utility": "cpp",
     "thread": "cpp",
     "chrono": "c",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "fstream": "cpp"
   }
 }
