--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,31 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "(lldb) Launch",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/src/build/raymini",
-      "args": ["${workspaceFolder}/src/models/Apple.off"],
-      "stopAtEntry": false,
-      "cwd": "${fileDirname}",
-      "environment": [],
-      "externalConsole": false,
-      "MIMode": "lldb"
-    }
-  ]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Debug RayMini",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/raymini",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/src",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+            "preLaunchTask": "Build RayMini"
+        },
+        {
+            "name": "Debug RayMini with Model",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/raymini",
+            "args": ["models/minion.off"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/src",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+            "preLaunchTask": "Build RayMini"
+        }
+    ]
 }
